--- a/app/assets/css/sass/_styles_box.scss
+++ b/app/assets/css/sass/_styles_box.scss
@@ -61,5 +61,15 @@
 				}
 			}
 		}
+
+		&.nohead {
+			.ms-header {
+				display: none;
+			}
+
+			.inside {
+				padding: 0;
+			}
+		}
 	}
 }
